--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,8 @@ trigger:
 pool: myAgentPool
 
 variables:
-  azureServiceConnectionId: ""
-  webAppName: ""
-  environmentName: ""
+  azureServiceConnectionId: "sc-azuredevops"
+  webAppName: "ml-flask-webapp"
   projectRoot: ${System.DefaultWorkingDirectory}
 
 
@@ -26,31 +25,31 @@ stages:
         python3.8 -m pip install --upgrade pip
         python3.8 -m pip install setup
         python3.8 -m pip install -r requirements.txt
-      workingDirectory: $(projectRoot)
+#      workingDirectory: $(projectRoot)
       displayName: 'myStep 1'
 
-    - script: |
-        export PATH=$HOME/.local/bin:$PATH
-        make install
-      workingDirectory: $(projectRoot)
-      displayName: 'myStep 2'
+#    - script: |
+#        export PATH=$HOME/.local/bin:$PATH
+#        make install
+#      workingDirectory: $(projectRoot)
+#      displayName: 'myStep 2'
 
     - script: |
-        export PATH=$HOME/.local/bin:$PATH
+#        export PATH=$HOME/.local/bin:$PATH
         make install
         make lint
-      workingDirectory: $(projectRoot)
+#     workingDirectory: $(projectRoot)
       displayName:  'myStep 3 - Run lint tests'
 
-    - task: ArchiveFiles@2
-      displayName: 'myStep 4 - Archive files'
-      inputs:
-        rootFolderOrFile: '$(projectRoot)'
-        includeRootFolder: false
-        archiveType: zip
-        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-        replaceExistingArchive: true
+#   - task: ArchiveFiles@2
+#     displayName: 'myStep 4 - Archive files'
+#     inputs:
+#       rootFolderOrFile: '$(projectRoot)'
+#       includeRootFolder: false
+#       archiveType: zip
+#       archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+#     replaceExistingArchive: true
 
-    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      displayName: 'myStep 5 - Upload package'
-      artifact: drop
+#   - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+#     displayName: 'myStep 5 - Upload package'
+#     artifact: drop
