--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,6 @@ pool: myAgentPool
 variables:
   azureServiceConnectionId: "sc-azuredevops"
   webAppName: "ml-flask-webapp"
-  #projectRoot: $(System.DefaultWorkingDirectory)
 
 
 stages:
@@ -28,13 +27,6 @@ stages:
         python3 -m pip install setup
         python3 -m pip install -r requirements.txt
       displayName: 'Install python packages and dependency'
-      #workingDirectory: $(projectRoot)
-
-#    - script: |
-#        export PATH=$HOME/.local/bin:$PATH
-#        make install
-#      workingDirectory: $(projectRoot)
-#      displayName: 'myStep 2'
 
     - script: |
         python3 -m venv virt
@@ -42,17 +34,39 @@ stages:
         make install
         make lint
       displayName:  'Installing and run lint'
-      #workingDirectory: $(projectRoot)
+      
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(Build.SourcesDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+        replaceExistingArchive: true
+        verbose: # (no value); this input is optional
+    - publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
+      displayName: 'Upload package'
+      artifact: drop
 
-#   - task: ArchiveFiles@2
-#     displayName: 'myStep 4 - Archive files'
-#     inputs:
-#       rootFolderOrFile: '$(projectRoot)'
-#       includeRootFolder: false
-#       archiveType: zip
-#       archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-#     replaceExistingArchive: true
-
-#   - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-#     displayName: 'myStep 5 - Upload package'
-#     artifact: drop
+- stage: Deployment
+  displayName: "Deploy Webapp"
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+      - deployment: DeploymentJob
+        pool: myAgentPool
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+              - task: UsePythonVersion@0
+                inputs:
+                  versionSpec: 3.8
+                displayName: 'Use Python version 3.8'
+    
+              - task: AzureWebApp@1
+                displayName: 'Deploy Azure Web App : {{ webAppName }}'
+                inputs:
+                  azureSubscription: $(azureServiceConnectionId)
+                  appName: $(webAppName)
+                  package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+                  deploymentMethod: zipDeploy
