--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,10 +44,9 @@ stages:
         rootFolderOrFile: '$(projectRoot)'
         includeRootFolder: false
         archiveType: zip
-        #archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-        archiveFile: app.zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
         replaceExistingArchive: true
 
-    - upload: app.zip
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
       displayName: 'Upload package'
       artifact: drop
